fix chip overflows & cursor pointers

--- a/src/app/courses/add-courses/courses-step.scss
+++ b/src/app/courses/add-courses/courses-step.scss
@@ -1,7 +1,3 @@
-planet-courses-step .mat-mdc-chip-set {
-  margin: 0;
-}
-
 .step-form-container {
   display: grid;
   grid-template-rows: minmax(auto, min-content) auto;
