--- a/src/styles.scss
+++ b/src/styles.scss
@@ -632,13 +632,27 @@ body {
     padding-top: 0.5rem;
   }
 
-  .chip-no-style {
-    pointer-events: none;
-    &:focus::after {
-      opacity: 0;
+  .tags-list .mat-mdc-chip {
+    max-width: 200px;
+
+    .mdc-evolution-chip__action,
+    .mdc-evolution-chip__cell--primary {
+      color: inherit;
+      cursor: pointer;
+      min-width: 0;
     }
-    &> mat-icon {
-      pointer-events: auto;
+
+    .mdc-evolution-chip__text-label,
+    .mat-mdc-chip-action-label {
+      display: block;
+      max-width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+
+      :focus, :hover {
+        color: currentColor;
+      }
     }
   }
 
